quantum_dsl_tests/no-classiq-tutorial--cline/test_028/generated_code_run_output_attempt_6.txt
Traceback (most recent call last):
  File "/Users/arielsmoler/AI_project/ai_tests_classiq-library/quantum_dsl_tests/no-classiq-tutorial--cline/test_028/generated_code_attempt_6.py", line 37, in <module>
    model = create_model(main)
            ^^^^^^^^^^^^^^^^^^
  File "/Users/arielsmoler/.pyenv/versions/3.11.4/lib/python3.11/site-packages/classiq/qmod/create_model_function.py", line 61, in create_model
    model = entry_point.create_model(
            ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arielsmoler/.pyenv/versions/3.11.4/lib/python3.11/site-packages/classiq/qmod/quantum_function.py", line 296, in create_model
    return QFunc(_dec_main).create_model(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arielsmoler/.pyenv/versions/3.11.4/lib/python3.11/site-packages/classiq/qmod/quantum_function.py", line 150, in create_model
    return self._create_generative_model(model)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arielsmoler/.pyenv/versions/3.11.4/lib/python3.11/site-packages/classiq/qmod/quantum_function.py", line 175, in _create_generative_model
    return interpreter.expand()
           ^^^^^^^^^^^^^^^^^^^^
  File "/Users/arielsmoler/.pyenv/versions/3.11.4/lib/python3.11/site-packages/classiq/model_expansions/interpreters/base_interpreter.py", line 131, in expand
    self._error_manager.report_errors(ClassiqExpansionError)
  File "/Users/arielsmoler/.pyenv/versions/3.11.4/lib/python3.11/site-packages/classiq/qmod/semantics/error_manager.py", line 86, in report_errors
    raise error_type("\n\t" + "\n\t".join(errors))
classiq.interface.exceptions.ClassiqExpansionError: 
	TypeError: 'QNum' object is not subscriptable
		at file generated_code_attempt_6.py line 21 character 16 in function <lambda>
If you need further assistance, please reach out on our Community Slack channel at: https://short.classiq.io/join-slack or open a support ticket at: https://classiq-community.freshdesk.com/support/tickets/new
